--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jest": "^26.6.3",
+    "mongodb-memory-server": "^6.9.2",
     "mongoose": "^5.10.11",
     "morgan": "~1.9.1",
     "supertest": "^6.0.1",
     "unix-timestamp": "^0.2.0"
   },
- 
   "jest": {
-    "testEnvironment" : "node"
+    "testEnvironment": "node"
   }
 }
